Fixed error on page query.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Daydream Project Reverie Child Theme
-Description: Child theme for the Reverie
+Theme Name: Daydream Project Reverie Child Theme 2014
+Description: Reverie 4 Child theme. 
 Author: Cassandra Marshall
 Template: reverie
 */
