--- a/style.css
+++ b/style.css
@@ -132,15 +132,15 @@ h2.experienceText{
 
 .experience{
 	margin: 100px 0 100px 0;
-	background-color: #7b578c;	
 	text-align: right;
 	opacity:1;
 	font-family: 'Ubuntu', sans-serif;
 	/*background-image:url(/images/gridme.png);*/
-	background-image:url(bgs/gogglescat.png);
+	background-image:url(bgs/32.jpg);
 	background-size: 100% 100%;
 	background-repeat:no-repeat;
-	-webkit-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.75);
+	height: 100% !important;
+	/*-webkit-box-shadow: 0px 1px 12px rgba(50, 50, 50, 0.75);
  	-moz-box-shadow:    0px 1px 12px rgba(50, 50, 50, 0.75);
 	box-shadow:         0px 1px 12px rgba(50, 50, 50, 0.75);
 	/*
