--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h2.experienceText{
 	opacity:1;
 	font-family: 'Ubuntu', sans-serif;
 	/*background-image:url(/images/gridme.png);*/
-	background-image:url(bgs/32.jpg);
+	background-image:url(bgs/gogglescat.png);
 	background-size: 100% 100%;
 	background-repeat:no-repeat;
 	height: 100% !important;
